:lipstick: Fix styles on mobile

--- a/aula04/src/components/Blog/styles.css
+++ b/aula04/src/components/Blog/styles.css
@@ -1,11 +1,7 @@
-.blog {
-  padding: 1rem 200px;
-}
-
-@media (max-width: 978px) {
-  .blog {
-    padding: 1rem;
-  }
+.container {
+  max-width: 1180px;
+  margin: 0 auto;
+  padding: 1rem;
 }
 
 .blog-items {
@@ -41,4 +37,20 @@
   width: 100%;
   height: auto;
   border-radius: 5px 5px 0 0;
+}
+
+@media (max-width: 978px) {
+  .blog {
+    padding: 1rem;
+  }
+
+  .blog-items {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 768px) {
+  .blog-items {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
